# omprs

./: CMakeLists.txt  CMakeSettings.json  README.md  api.hpp  core.cpp  core.hpp  main.cpp  main.hpp  omprs.cpp  omprs.hpp  singleton.hpp  types.hpp
.github/: FUNDING.yml
.github/workflows/: build.yml
api/: api.hpp  players.hpp  utils.hpp
callbacks/: actors.hpp  checkpoints.hpp  classes.hpp  dialogs.hpp  gangzones.hpp  menus.hpp  models.hpp  objects.hpp  pickups.hpp  players.hpp  textdraws.hpp  utils.hpp  vehicles.hpp
docker/: build.sh
functions/: actors.hpp  checkpoints.hpp  classes.hpp  dialogs.hpp  gangzones.hpp  menus.hpp  models.hpp  objects.hpp  pickups.hpp  players.hpp  textdraws.hpp  textlabels.hpp  utils.hpp  vehicles.hpp
